retested up through ALIGN_BISMARK

--- a/workflow_code/bin/dp_tools__methylseq_dna/methylSeqDNA_v2.yaml
+++ b/workflow_code/bin/dp_tools__methylseq_dna/methylSeqDNA_v2.yaml
@@ -68,6 +68,7 @@ Staging:
         - ISA Field Name: 
             - Parameter Value[Merged Sequence Data File]
             - Characteristics[Merged Sequence Data File]
+            - Parameter Value[Merged Sequence Data]
             - Raw Data File
           ISA Table Source: Assay
           Multiple Values Per Entry: true
