--- a/workflow_code/config/default_slurm.config
+++ b/workflow_code/config/default_slurm.config
@@ -10,6 +10,30 @@ process {
     maxForks = 1 // maxForks is number of parallel tasks allowed.  For downloads, downloading one thing at a time seems to make sense.
   }
 
+  withName:'FETCH_ISA|ISA_TO_RUNSHEET|COPY_READS' {
+    cpus   = { 1                    }
+    memory = { 2.GB                 }
+  }
+
+  withName:'RAW_FASTQC|TRIMMED_FASTQC' {
+    cpus   = { 2     * task.attempt }  // used 198 cpu. to do: compare 4
+    memory = { 4.GB  * task.attempt }
+  }
+
+  withName:TRIMGALORE {
+    // see https://github.com/FelixKrueger/TrimGalore/blob/master/Docs/Trim_Galore_User_Guide.md
+    cpus   = { 8    * task.attempt  }  // 1 ->16, use 662.5 cpu: compare 8
+    memory = { 2.GB                 }
+  }
+
+  withName:ALIGN_BISMARK {
+      cpus   = { 4                    }
+      memory = { 48.GB }
+      errorStrategy = { 
+          [137].contains(task.exitStatus) ? 'retry' : 'terminate' 
+      }
+  }
+
   withLabel: maxCPU {
     cpus = 8
   }
