--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -6,6 +6,7 @@ params {
     *  PARAMETERS THAT SHOULD BE SET/CHECKED FOR EACH USE
     * ----------------------------------------------------
     */
+    assay_suffix = '_GLMethylSeq' // Suffix to append to output filenames
 
     // accession number (within quotes), or 'null' if providing your own runsheet specified next (no quotes if 'null')
     osdAccession = null
@@ -22,8 +23,9 @@ params {
     publish_dir_mode            = 'link'
 
     multiqc_config = "${projectDir}/config/multiqc.config"
-    reference_table = "https://raw.githubusercontent.com/nasa/GeneLab_Data_Processing/1cda098ba95c4fdd58984139d3d69085d1c12797/GeneLab_Reference_Annotations/Pipeline_GL-DPPD-7110_Versions/GL-DPPD-7110/GL-DPPD-7110_annotations.csv"
+    reference_table = "https://raw.githubusercontent.com/nasa/GeneLab_Data_Processing/refs/heads/master/GeneLab_Reference_Annotations/Pipeline_GL-DPPD-7110_Versions/GL-DPPD-7110-A/GL-DPPD-7110-A_annotations.csv"
 
+    clip = 0
     non_directional = true
     nugen = false
 
